--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Created a Navagation Bar -->
         
         <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="page1.html">Genshin Impact</a></li>
         <li><a href="page2.html">Tears Of Themis</a></li>
         <li><a href="page3.html">Honkai Star Rail</a></li>
