--- a/page1.html
+++ b/page1.html
@@ -16,7 +16,7 @@
   
   <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href="page1.html">Genshin Impact</a></li>
+  <li><a href="page1.html" class="active">Genshin Impact</a></li>
   <li><a href="page2.html">Tears Of Themis</a></li>
   <li><a href="page3.html">Honkai Star Rail</a></li>
   <li><a href="page4.html">Honkai Impact</a></li>
