--- a/page2.html
+++ b/page2.html
@@ -21,7 +21,7 @@
     <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="page1.html">Genshin Impact</a></li>
-    <li><a href="page2.html">Tears Of Themis</a></li>
+    <li><a href="page2.html" class="active">Tears Of Themis</a></li>
     <li><a href="page3.html">Honkai Star Rail</a></li>
     <li><a href="page4.html">Honkai Impact</a></li>
     </ul>
