--- a/page3.html
+++ b/page3.html
@@ -17,7 +17,7 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="page1.html">Genshin Impact</a></li>
     <li><a href="page2.html">Tears Of Themis</a></li>
-    <li><a href="page3.html">Honkai Star Rail</a></li>
+    <li><a href="page3.html" class="active">Honkai Star Rail</a></li>
     <li><a href="page4.html">Honkai Impact</a></li>
     </ul>
     <div id="leaves">
