--- a/page4.html
+++ b/page4.html
@@ -18,7 +18,7 @@
     <li><a href="page1.html">Genshin Impact</a></li>
     <li><a href="page2.html">Tears Of Themis</a></li>
     <li><a href="page3.html">Honkai Star Rail</a></li>
-    <li><a href="page4.html">Honkai Impact</a></li>
+    <li><a href="page4.html" class="active">Honkai Impact</a></li>
     </ul>
            
 <h1>Honkai Impact</h1>
