--- a/page2.html
+++ b/page2.html
@@ -36,6 +36,9 @@
   
 
  <p class="para-1"><a href="https://tot.hoyoverse.com/en-us">Tears of Themis</a> is a romance mystery visual novel game, blending captivating storytelling with investigative gameplay. Set in a modern urban world, players assume the role of a young lawyer, solving intriguing cases while navigating complex relationships. It offers immersive experiences filled with drama, suspense, and romance."</p>
+
+
+ <img class="gif" src="artem2.gif" alt="artem wing GIF">
 </div>
 
 
