--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
         </div>
 <!-- heading -->
 
- <h1>My Big Three</h1>
+ <h1>My Top Three Hoyoverse Games</h1>
 
+ <div class="container3">
+    <img class="gifff" src="pom-pom-astral-express (1).gif" alt="Pom pom 2 GIF">
  <img class="giff" src="paimon.gif" alt="Paimon GIF">
+ <img class="giff" src="pom-pom-astral-express.gif" alt="Pompom 1 GIF">
+</div>
 
     <div class="textbox">
          <!-- second paragraph -->
@@ -80,6 +84,7 @@
     <h2><b> Honkai Star Rail </b></h2>
     <!-- image -->
         <img class="star" src="starrail.png" alt="Error Image Not Found">
+
     <p class="para-4">Honkai Star Rail is a mobile role-playing game set in the Honkai Impact universe, featuring strategic gameplay and immersive storytelling.</p>
 
     <!-- GIF image -->
