--- a/page3.html
+++ b/page3.html
@@ -53,7 +53,7 @@
   
 
 
-  <p class="para-1"><a href="https://hsr.hoyoverse.com/en-us/">Honkai Star Rail</a> is a mobile role-playing game set in the expansive universe of "Honkai Impact." Players embark on a journey through time and space, assembling a team of valiant warriors known as "Starlits" to combat the Honkai menace and restore balance to the fractured world.</p>
+  <p class="para-1"><a href="https://hsr.hoyoverse.com/en-us/">Honkai Star Rail</a> is a mobile role-playing game set in the expansive universe of "Honkai Impact." Players embark on a journey through time and space, assembling a team of valiant warriors known as "Trailblazers" to combat the Honkai menace and restore balance to the fractured world.</p>
   
   </div>
 
