--- a/page4.html
+++ b/page4.html
@@ -35,7 +35,7 @@
     <h2>Would I try it?</h2>
 <img class="honkai" src="hq720.png" alt="Error picture missing">
 
-<p class="para-2">As I enjoyed playing Genshin Impact and Tears of Themis, both of which are developed by miHoYo and offer immersive storytelling and engaging gameplay experiences,ao there's a good chance I might also enjoy Honkai Impact. While the gameplay mechanics and settings may differ, "Honkai Impact" shares similarities with miHoYo's other games in terms of its stunning visuals, deep lore, and character-driven narratives. If I'm intrigued by the idea of exploring a post-apocalyptic world filled with fast-paced battles and diverse characters, it's worth giving Honkai Impact a try to see if it resonates with my gaming preferences.</p>
+<p class="para-2">As I enjoyed playing Genshin Impact and Tears of Themis, both of which are developed by miHoYo and offer immersive storytelling and engaging gameplay experiences,ao there's a good chance I might also enjoy Honkai Impact. While the gameplay mechanics and settings may differ, Honkai Impact shares similarities with miHoYo's other games in terms of its stunning visuals, deep lore, and character-driven narratives. If I'm intrigued by the idea of exploring a post-apocalyptic world filled with fast-paced battles and diverse characters, it's worth giving Honkai Impact a try to see if it resonates with my gaming preferences.</p>
 </div>
 
 
